--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,10 @@
 body{
+  max-width: 100%;
+  overflow-x: hidden;
   background-color: #D9EFFF;
   font-family: roboto;
 }
 
-.contato{
-  margin-left: 1200px;
-}
 
 .navbar-nav{
   margin-left: 25px;
@@ -32,22 +31,30 @@ body{
 }
 .lives1{
   position: absolute;
-  left: 20px;
+  width: 450px;
+  height: 292px;
+  left: 10px;
   top: 319px;
 }
 .lives2{
   position: absolute;
-  left: 495px;
+  width: 450px;
+  height: 292px;
+  left: 485px;
   top: 319px;
 }
 .lives3{
   position: absolute;
-  left: 970px;
+  width: 450px;
+  height: 292px;
+  left: 960px;
   top: 319px;
 }
 .lives4{
   position: absolute;
-  left: 1445px;
+  width: 450px;
+  height: 292px;
+  left: 1435px;
   top: 319px;
 }
 
@@ -90,6 +97,11 @@ body{
 
 
 h2{
+  position: absolute;
+  width: 450px;
+  height: 56px;
+  left: 20px;
+  top: 249px;
   font-weight: bold;
   font-size: 48px;
   line-height: 56px;
