--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,7 +103,7 @@ footer p a {
   width: 130px;
 }
 .one {
-	background: url('https://source.unsplash.com/user/rickyrj/900x92');
+	background: url('https://source.unsplash.com/user/rickyrj/500x525');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
