--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,104 +103,104 @@ footer p a {
   width: 130px;
 }
 .one {
-	background: url('https://source.unsplash.com/user/rickyrj/500x525');
+	background: url('https://source.unsplash.com/random/500x525');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .two {
-	background: url('https://source.unsplash.com/user/rickyrj/820x900');
+	background: url('https://source.unsplash.com/random/820x900');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .three {
-	background: url('https://source.unsplash.com/user/rickyrj/500x500');
+	background: url('https://source.unsplash.com/random/500x500');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .five {
-	background: url('https://source.unsplash.com/user/rickyrj/550x520');
+	background: url('https://source.unsplash.com/random/550x520');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .six {
-	background: url('https://source.unsplash.com/user/rickyrj/660x630');
+	background: url('https://source.unsplash.com/random/660x630');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .seven {
-	background: url('https://source.unsplash.com/user/rickyrj/700x770');
+	background: url('https://source.unsplash.com/random/700x770');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .eight {
-	background: url('https://source.unsplash.com/user/rickyrj/880x820');
+	background: url('https://source.unsplash.com/random/880x820');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .nine {
-	background: url('https://source.unsplash.com/user/rickyrj/898x820');
+	background: url('https://source.unsplash.com/random/898x820');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .ten {
-	background: url('https://source.unsplash.com/user/rickyrj/8998x920');
+	background: url('https://source.unsplash.com/random/8998x920');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .eleven {
-	background: url('https://source.unsplash.com/user/rickyrj/898x960');
+	background: url('https://source.unsplash.com/random/898x960');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .tlv {
-	background: url('https://source.unsplash.com/user/rickyrj/999x888');
+	background: url('https://source.unsplash.com/random/999x888');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .thirteen {
-	background: url('https://source.unsplash.com/user/rickyrj/1000x777');
+	background: url('https://source.unsplash.com/random/1000x777');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .ftn {
-	background: url('https://source.unsplash.com/user/rickyrj/2000x777');
+	background: url('https://source.unsplash.com/random/2000x777');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .fith {
-	background: url('https://source.unsplash.com/user/rickyrj/2000x1000');
+	background: url('https://source.unsplash.com/random/2000x1000');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 .sith {
-	background: url('https://source.unsplash.com/user/rickyrj/3000x1000');
+	background: url('https://source.unsplash.com/random/3000x1000');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
 .sevth {
-	background: url('https://source.unsplash.com/user/rickyrj/9000x9000');
+	background: url('https://source.unsplash.com/random/9000x9000');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
